--- a/src/layouts/Shell.css
+++ b/src/layouts/Shell.css
@@ -165,23 +165,23 @@ h1 {
 }
 
 h2 {
-  font-size: 1.7rem;
+  font-size: 1.7em;
 }
 
 h3 {
-  font-size: 1.5rem;
+  font-size: 1.5em;
 }
 
 h4 {
-  font-size: 1.3rem;
+  font-size: 1.3em;
 }
 
 h5 {
-  font-size: 1.2rem;
+  font-size: 1.2em;
 }
 
 h5 {
-  font-size: 1.1rem;
+  font-size: 1.1em;
 }
 
 main {
