chore: scaffold sections

--- a/src/layouts/sections/ServicesSection.astro
+++ b/src/layouts/sections/ServicesSection.astro
@@ -5,7 +5,7 @@
 <style>
   section {
     background-color: var(--color-white);
-    padding: 8rem var(--size-page-padding);
+    padding: 8rem var(--size-page-padding) var(--size-gutter-big) var(--size-page-padding);
     z-index: 1;
 
     .tab {
