chore: rearrange sections

--- a/src/layouts/sections/QuestionsSection.astro
+++ b/src/layouts/sections/QuestionsSection.astro
@@ -3,7 +3,7 @@
 </section>
 <style>
   section {
-    background-color: var(--color-white);
+    background-color: var(--color-background);
     padding: 8rem var(--size-page-padding);
   }
 </style>
