--- a/src/layouts/sections/ReferencesSection.astro
+++ b/src/layouts/sections/ReferencesSection.astro
@@ -3,7 +3,7 @@
 </section>
 <style>
   section {
-    background-color: var(--color-background);
+    background-color: var(--color-white);
     padding: 8rem var(--size-page-padding);
     z-index: 1;
   }
