--- a/src/layouts/sections/ToolsSection.astro
+++ b/src/layouts/sections/ToolsSection.astro
@@ -3,7 +3,7 @@
 </section>
 <style>
   section {
-    background-color: var(--color-white);
+    background-color: var(--color-background);
     padding: var(--size-gutter-big) var(--size-page-padding) 8rem var(--size-page-padding);
     z-index: 1;
   }
