--- a/src/pages/[...locale]/index.astro
+++ b/src/pages/[...locale]/index.astro
@@ -28,9 +28,10 @@ const { Content: QuestionsSection } = await render(await getEntry("sections", `$
   <SpotlightSection />
   <Divider kind="single" firstSegmentColor="var(--color-white)" fixAntialiasingBottom />
   <ServicesSection />
-  <ToolsSection />
   <Divider kind="single" firstSegmentColor="var(--color-white)" flipVertical fixAntialiasingTop />
-  <ReferencesSection />
+  <ToolsSection />
   <Divider kind="single" firstSegmentColor="var(--color-white)" fixAntialiasingBottom />
+  <ReferencesSection />
+  <Divider kind="single" firstSegmentColor="var(--color-white)" flipVertical fixAntialiasingTop />
   <QuestionsSection />
 </Shell>
