--- a/src/layouts/sections/SpotlightSection.astro
+++ b/src/layouts/sections/SpotlightSection.astro
@@ -18,6 +18,14 @@ import Carousel from "../../components/Carousel.astro";
       margin-inline-end: calc(var(--size-page-padding) + 7rem);
     }
 
+    .prev {
+      left: var(--size-page-padding);
+    }
+
+    .next {
+      right: var(--size-page-padding);
+    }
+
     .active {
       display: flex;
       flex-direction: column;
