--- a/src/components/Carousel.astro
+++ b/src/components/Carousel.astro
@@ -65,7 +65,7 @@ import Sprite from "./Sprite.astro";
   .carousel-button {
     position: absolute;
     top: 50%;
-    z-index: 10;
+    z-index: 5;
     transform: translateY(-50%);
     background: transparent;
     border: none;
@@ -80,7 +80,7 @@ import Sprite from "./Sprite.astro";
     }
 
     &.prev {
-      left: var(--size-page-padding);
+      left: 0;
 
       svg {
         rotate: 0.25turn;
@@ -88,7 +88,7 @@ import Sprite from "./Sprite.astro";
     }
 
     &.next {
-      right: var(--size-page-padding);
+      right: 0;
 
       svg {
         rotate: 0.75turn;
@@ -104,35 +104,37 @@ import Sprite from "./Sprite.astro";
   import ClassNames from "embla-carousel-class-names";
 
   function register() {
-    const embla = document.querySelector(".carousel") as HTMLElement;
-    if (!embla) throw new Error("Embla node not found");
+    const emblas = document.querySelectorAll(".carousel") as NodeListOf<HTMLElement>;
+    if (!emblas) throw new Error("No Embla node not found");
 
-    const emblaViewport = embla.querySelector(".carousel-viewport") as HTMLElement;
-    const options: EmblaOptionsType = { loop: true };
-    const plugins = [Autoplay({ delay: 10000 }), ClassNames()];
-    const emblaApi = EmblaCarousel(emblaViewport, options, plugins);
+    emblas.forEach((embla) => {
+      const emblaViewport = embla.querySelector(".carousel-viewport") as HTMLElement;
+      const options: EmblaOptionsType = { loop: true };
+      const plugins = [Autoplay({ delay: 10000 }), ClassNames()];
+      const emblaApi = EmblaCarousel(emblaViewport, options, plugins);
 
-    const updateActiveOverlay = () => {
-      const slide = emblaApi.selectedScrollSnap();
-      const overlay = embla.querySelector(`[data-slide-id="${slide}"]`) as HTMLElement;
-      overlay?.classList.add("active");
-      const overlays = embla.querySelectorAll(".carousel-overlay [data-slide-id]") as NodeListOf<HTMLElement>;
-      overlays.forEach((o) => {
-        if (o !== overlay) o.classList.remove("active");
-      });
-    };
+      const updateActiveOverlay = () => {
+        const slide = emblaApi.selectedScrollSnap();
+        const overlay = embla.querySelector(`[data-slide-id="${slide}"]`) as HTMLElement;
+        overlay?.classList.add("active");
+        const overlays = embla.querySelectorAll(".carousel-overlay [data-slide-id]") as NodeListOf<HTMLElement>;
+        overlays.forEach((o) => {
+          if (o !== overlay) o.classList.remove("active");
+        });
+      };
 
-    if (embla.querySelector(".carousel-overlay")) {
-      updateActiveOverlay();
-      emblaApi.on("select", () => {
+      if (embla.querySelector(".carousel-overlay")) {
         updateActiveOverlay();
-      });
-    }
+        emblaApi.on("select", () => {
+          updateActiveOverlay();
+        });
+      }
 
-    const prevButton = embla.querySelector(".carousel-button.prev") as HTMLElement;
-    const nextButton = embla.querySelector(".carousel-button.next") as HTMLElement;
-    prevButton.addEventListener("click", () => emblaApi.scrollPrev(), false);
-    nextButton.addEventListener("click", () => emblaApi.scrollNext(), false);
+      const prevButton = embla.querySelector(".carousel-button.prev") as HTMLElement;
+      const nextButton = embla.querySelector(".carousel-button.next") as HTMLElement;
+      prevButton.addEventListener("click", () => emblaApi.scrollPrev(), false);
+      nextButton.addEventListener("click", () => emblaApi.scrollNext(), false);
+    });
   }
 
   register();
