--- a/src/layouts/templates/Article.astro
+++ b/src/layouts/templates/Article.astro
@@ -6,7 +6,7 @@ type Props = {
 const { title } = Astro.props;
 ---
 
-<article class="page-padding">
+<article>
   <header>
     <h1>{title}</h1>
   </header>
@@ -15,9 +15,29 @@ const { title } = Astro.props;
 
 <style>
   article {
-    margin-block: var(--size-gutter-huge);
-    margin-inline: auto;
-    max-width: 45rem;
+    display: flex;
+    flex-direction: column;
+    width: 100%;
     font-size: 1.2rem;
+    padding-block: var(--size-gutter-huge);
+
+    header {
+      padding: 0 var(--size-page-padding);
+      text-align: center;
+    }
+
+    section {
+      padding: 0 var(--size-page-padding);
+      font-size: 1.4rem;
+      padding-block: var(--size-gutter-massive);
+
+      &:first-of-type {
+        padding-block-start: var(--size-gutter-big);
+      }
+
+      & > *:first-child {
+        margin-block-start: 0;
+      }
+    }
   }
 </style>
