--- a/src/layouts/sections/ImpressionsSection.astro
+++ b/src/layouts/sections/ImpressionsSection.astro
@@ -1,18 +1,21 @@
 ---
 import { currentLocale } from "astro-nanostores-i18n:runtime";
 import Image from "astro/components/Image.astro";
+import { getCollection } from "astro:content";
 import { getEntry } from "astro:content";
 
 type Props = {
   class?: string;
-  gallery: string;
+  title: string;
 };
 
-const { class: className, gallery } = Astro.props;
+const { class: className, title } = Astro.props;
 const locale = currentLocale.get();
-const galleryEntry = await getEntry("galleries", `${gallery}/${locale}`);
-if (!galleryEntry) {
-  throw new Error(`Gallery not found: ${gallery} (${locale})`);
+console.log(className);
+console.log(await getCollection("galleries"));
+const gallery = await getEntry("galleries", `${title}/${locale}`);
+if (!gallery) {
+  throw new Error(`Gallery not found: ${title} (${locale})`);
 }
 ---
 
@@ -20,32 +23,11 @@ if (!galleryEntry) {
   <slot name="title" />
   <div>
     {
-      galleryEntry.data.items.map((item) => (
-        <Image src={item.photo} width={800} alt={typeof item.label === "string" ? item.label : ""} />
+      gallery.data.items.map((item) => (
+        <div>
+          <Image src={item.photo} alt={typeof item.label === "string" ? item.label : ""} />
+        </div>
       ))
     }
   </div>
 </section>
-
-<style>
-  section {
-    & > div {
-      display: grid;
-      grid-template-columns: repeat(2, 1fr);
-      justify-items: center;
-
-      img {
-        height: auto;
-        width: 100%;
-        object-fit: cover;
-        border-radius: var(--size-border-radius);
-        filter: saturate(0.2);
-        transition: 1s;
-
-        &:hover {
-          filter: saturate(1);
-        }
-      }
-    }
-  }
-</style>
